# hook-echo

./: .dockerignore  .env.example  .gitignore  .spectral.yaml  Dockerfile  Makefile  README.md  compose.yml  config.py  main.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yaml
echo/: config.py  main.py
tests/: test_echo.py
